==> dk2909/Sound_Processor/Lab4/Lab4_Fitness_4C123/os.c <==
#include <stdint.h>
#include <stdlib.h>
#include <math.h>
#include "os.h"
#include "CortexM.h"
#include "BSP.h"
#include "../inc/tm4c123gh6pm.h"
#include "arm_math.h"
#define NUMTHREADS  8        // maximum number of threads
#define NUMPERIODIC 2        // maximum number of periodic threads
#define STACKSIZE   100      // number of 32-bit words in stack per thread

void OS_EdgeTrigger_Init(int32_t *semaPt, uint8_t priority){
	edgeSemaphore = semaPt;
//***IMPLEMENT THIS***
	/*
// 1) activate clock for Port D
	SYSCTL_RCGCGPIO_R |= 0x00000008;
// allow time for clock to stabilize
	while((SYSCTL_PRGPIO_R&0x08) == 0){}
// 2) no need to unlock PD7
		GPIO_PORTD_LOCK_R = 0x4C4F434B; 
		GPIO_PORTD_CR_R |= 0xFF;
// 3) disable analog on PD7
		GPIO_PORTD_AMSEL_R &= ~0x80; // 1000 0000
// 4) configure PD7 as GPIO
		GPIO_PORTD_PCTL_R = (GPIO_PORTD_PCTL_R&0x0FFFFFFF)+0x00000000; 	
// 5) make PD7 input
		GPIO_PORTD_DIR_R &= ~0x80;
// 6) disable alt funct on PD7
		GPIO_PORTD_AFSEL_R &= ~0x80;
// disable pull-up on PD7
		GPIO_PORTD_PUR_R &= ~0x80; 
// 7) enable digital I/O on PD7 
	GPIO_PORTD_DEN_R |= 0x80;		*/
	BSP_Button2_Init();
// (d) PD7 is edge-sensitive 
	GPIO_PORTD_IS_R &= ~0x80;
//     PD7 is not both edges 
	GPIO_PORTD_IBE_R &= ~0x80;
//     PD7 is falling edge event 
	GPIO_PORTD_IEV_R &= ~0x80; 
// (e) clear PD7 flag
	GPIO_PORTD_ICR_R = 0x80;
// (f) arm interrupt on PD7
	GPIO_PORTD_IM_R |= 0x80;
// priority on Port D edge trigger is NVIC_PRI0_R	31 – 29
	uint32_t newPrio = priority << 29; // priority in bits 31-29
	NVIC_PRI0_R = (NVIC_PRI0_R&0x1FFFFFFF)| newPrio; 
// enable is bit 3 in NVIC_EN0_R
	NVIC_EN0_R = 0x00000008;
 }

void OS_EdgeTrigger_Restart(void){
//***IMPLEMENT THIS***
// rearm interrupt 3 in NVIC
	GPIO_PORTD_IM_R |= 0x80;
// clear flag7
	GPIO_PORTD_ICR_R = 0x80;
}
