==> r-downing/edx-rtos-course-data-msp432/Lab4_Fitness_MSP432/os.c <==
#include <stdint.h>
#include "os.h"
#include "CortexM.h"
#include "BSP.h"
#include "../inc/msp432p401r.h"
#define NUMTHREADS  8        // maximum number of threads
#define NUMPERIODIC 2        // maximum number of periodic threads
#define STACKSIZE   100      // number of 32-bit words in stack per thread

void OS_EdgeTrigger_Init(int32_t *semaPt, uint8_t priority){
	edgeSemaphore = semaPt;
//***IMPLEMENT THIS***
  // P5.1 input with pullup
	
	uint64_t pri64 = priority;
	pri64 = pri64 << 29;
	
	OS_InitSemaphore(edgeSemaphore, 0);
	
	/*
	P5SEL1 &= ~0x2;
	P5SEL0 &= ~0x2;
	P5DIR &= ~0x2;
	P5REN |= 0x2;
	P5OUT |= 0x2;
	P5IES |= 0x2; // (c) P5.1 is falling edge event
	
	P5IFG &= ~0x2; // (d) clear flag1 
	P1IE |= 0x2;   // (e) arm interrupt on P5.1
	NVIC_IPR9 = (NVIC_IPR9)|(pri64 << 29);
	NVIC_ISER1 &= 0x40;
  */
	
	//*
  P1SEL1 &= ~0x2;              // (b) configure P1.1, P1.4 as GPIO
  P1SEL0 &= ~0x2;              //     built-in Buttons 1 and 2
  P1DIR &= ~0x2;               //     make P1.1, P1.4 in
  P1REN |= 0x2;                //     enable pull resistors
  P1OUT |= 0x2;                //     P1.1, P1.4 is pull-up
  P1IES |= 0x2;                // (c) P1.1, P1.4 is falling edge event
  P1IFG &= ~0x2;               // (d) clear flag1 and flag4
  P1IE |= 0x2;                 // (e) arm interrupt on P1.1, P1.4
  NVIC_IPR8 = (NVIC_IPR8&0x00FFFFFF)|0x40000000; // (f) priority 2
  NVIC_ISER1 = 0x00000008;      // (g) enable interrupt 35 in NVIC
	//*/
	
  // (f) priority 
  // (g) enable interrupt 39 in NVIC
}

void OS_EdgeTrigger_Restart(void){
//***IMPLEMENT THIS***
	
	
	P1IE |= 0x2;
	NVIC_ISER1 = 0x00000008;
	P1IFG &= ~0x2;
	
	
	/*
	P5IE |= 0x2;
	NVIC_ISER1 &= 0x40;
	P5IFG &= ~0x2;
	*/
	
	/*
		P5IE |= 0x2;   // (e) arm interrupt on P5.1
  // (g) enable interrupt 39 in NVIC
	NVIC_ISER1 &= (1<<7);

  // (d) clear flag1 
	P5IFG &= ~0x2;
	*/

}
